# fmod-jni

./: .gitignore  README.md  fmod-jni.properties  fmod-jni.xml  fmod-jni_antBuild.xml  fmodjni.i  runswig.bat
c_jni_wrapper/: fmod_wrap.c
demo/src/demo/: MovingListener.java  SimpleEvent.java
example/com/worldwalkergames/demo/: SimpleEvent.java
fmod-jni-jar/java_api_src/org/fmod/: Channel.java  DSPConnection.java  ElfExecStackStripper.java  FMOD.java  FMODLoader.java  FMODResultTracker.java  Reverb3D.java  Sound.java  SoundGroup.java
fmodJniDll/: fmodJniDll.vcxproj
fmod_runtimes/: PLACE FMOD AND JNI DLLS HERE.txt  libfmodJNI.dylib
java_api_src/org/fmod/: ChannelGroup.java  DSP.java  FMOD.java  FmodSystem.java  Geometry.java
java_api_src/org/fmod/studio/: Bank.java  CommandReplay.java  ParameterInstance.java
java_generated_src/org/fmod/jni/: FMOD_3D_ATTRIBUTES.java  FMOD_ADVANCEDSETTINGS.java  FMOD_CHANNELCONTROL_CALLBACK_TYPE.java  FMOD_CHANNELCONTROL_DSP_INDEX.java  FMOD_CHANNELCONTROL_TYPE.java  FMOD_CHANNELORDER.java  FMOD_CREATESOUNDEXINFO.java  FMOD_DSPCONNECTION_TYPE.java  FMOD_DSP_RESAMPLER.java  FMOD_ERRORCALLBACK_INFO.java  FMOD_OPENSTATE.java  (+59 more)
nativeSwigWrapperLibraries/: README.md  fmodjni.i  runswig.bat
nativeSwigWrapperLibraries/c_jni_wrapper/: fmod_wrap.c
nativeSwigWrapperLibraries/linux_clion/: CMakeLists.txt
nativeSwigWrapperLibraries/windows_VisualStudio/: fmodJniDll.sln  fmodJniDll.vcxproj  fmodJniDll.vcxproj.filters
nativeSwigWrapperLibraries/windows_VisualStudio/Debug/: fmodJNI.exp  fmodJNI.ilk  fmodJNI.lib  vc120.idb
(+178 files in other folders)
